# ledger

./: .gitignore  CMakeLists.txt  README.md  resources.qrc
include/: firebase.h  password-authenticator.h  password-hash.h
src/: firebase.cc  main.cc
ui/: BaleDialog.qml  Central.qml  DatePickerDialog.qml  InputDialog.qml  LoadingPopup.qml  MonthlyTotalsPopup.qml  NamedRecordPopup.qml  PasswordDialog.qml  Spinner.qml  UserRecordPopup.qml  mainWindow.qml
